netpol-multipod-selector.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test-ns
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: springboot
    - podSelector:
        matchLabels:
            app: pythonapp
    ports:
    - protocol: TCP
      port: 27017
